# SnapLoad

./: .gitignore  CONTRIBUTING.md  README.md  SnapLoad.pyw  build.spec  create_shortcut.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
src/ytdlp_gui/: __init__.py  app.py  main.py
src/ytdlp_gui/core/: __init__.py  downloader.py  exceptions.py  metadata.py
src/ytdlp_gui/ui/: __init__.py  info_panel.py  input_panel.py  log_panel.py  main_window.py  progress_panel.py
src/ytdlp_gui/ui/components/: __init__.py  tooltip.py
src/ytdlp_gui/utils/: __init__.py  format_utils.py  image_utils.py  threading_utils.py
tests/: __init__.py  test_format_utils.py
